# depwatch

./: .env.example  .gitignore  README.md  action.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-risk.yml  pages.yml  release.yml
data/: requirements-sample.txt
src/depwatch/: cli.py  config.py  service.py  trends.py
src/depwatch/core/: __init__.py  models.py  requirements.py  resolve.py
src/depwatch/ingest/: __init__.py  cache.py  depsdev.py  github.py  http.py  osv.py  parsing.py  pypi.py  pypistats.py
src/depwatch/report/: __init__.py  html.py  markdown.py  render.py  sarif.py  summary.py
src/depwatch/scoring/: __init__.py  bands.py  dimensions.py  engine.py  remediation.py  score.py  severity.py  signals.py
src/depwatch/storage/: __init__.py  models.py  schema.py  store.py
tests/: test_bands.py  test_cache.py  test_cli.py  test_dimensions.py  test_golden.py  test_html.py  test_ingest_clients.py  test_markdown.py  test_remediation.py  test_report.py  test_requirements.py  test_resolve.py  test_sarif.py  test_score.py  test_service.py  test_severity.py  test_signals.py  test_smoke.py  test_storage.py  test_summary.py  test_trends.py
