[project]
name = "depwatch"
version = "0.1.0"
description = "Scan a project's Python dependencies and surface the few that are actually risky."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tim Tran" }]
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "packaging>=24.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
app = ["streamlit>=1.36"]

[project.scripts]
depwatch = "depwatch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "python-docx>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/depwatch"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer uses callables (Argument/Option) as parameter defaults by design.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
